--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build-bundle": "vue-cli-service build --target lib --name vue-chat-bot ./src/vue-chat-bot.js",
     "release": "standard-version && git push --follow-tags",
     "release:next": "standard-version --prerelease next && git push --follow-tags origin dev && npm publish --tag next",
-    "lint": "vue-cli-service lint --fix"
+    "lint": "vue-cli-service lint --fix",
+    "prettier": "prettier --write -u ./src/**/*"
   },
   "keywords": [
     "chatbot",
@@ -41,8 +42,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "2.8.8",
-    "pug": "^2.0.4",
-    "pug-plain-loader": "^1.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
     "standard-version": "^8.0.1",
