--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-chat-bot",
-  "version": "1.0.13",
+  "name": "vue-chat-bot-template",
+  "version": "1.0.1",
   "description": "Chatbot UI using Vue.js 2",
   "author": {
     "name": "Chea Bonnak"
@@ -23,7 +23,8 @@
   "keywords": [
     "chatbot",
     "bot ui",
-    "vue-chat-bot"
+    "vue-chat-bot",
+    "vue-chat-bot-template"
   ],
   "devDependencies": {
     "@commitlint/cli": "^7.6.1",
